Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -36,10 +36,19 @@ section {
     border: .05rem black solid;
 }
 
+/* Header Container */
+header {
+    text-align: center;
+}
+
+/* About Me Container */
+
+/* Project Container */
 .projects > div {
     width: 50%;
 }
 
+/* Tech Container */
 .tech-container {
     width: 100%;
     height: auto;
